src/pages/CharacterManagement/components/Skills/Skills.scss
.skill-modifiers {
  display: flex;
  align-items: center;
  justify-content: start;
  flex-direction: column;
  background: var(--clr-dark-background);
  border: 2px solid var(--clr-char-outline);
  padding: 0 0.5rem;
  border-radius: 0.5rem;
  opacity: var(--opacity);
  overflow: hidden;
  font-weight: bolder;

  /* Scrollbar Styles */
  /* width */
  ::-webkit-scrollbar {
    width: 0.3rem;
    border-radius: 0.5rem;
    opacity: 0.6;
    display: none;
  }

  /* Track */
  ::-webkit-scrollbar-track {
    background: var(--clr-accent-light);
    border-radius: 0.5rem;
    opacity: 0.6;
  }

  /* Handle */
  ::-webkit-scrollbar-thumb {
    border-radius: 0.5rem;
    background: var(--clr-dice-roll-hover);
    opacity: 0.6;
  }

  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: var(--clr-char-outline);
    opacity: 0.6;
  }

  h1 {
    font-size: 1rem;
    padding-top: 0.5rem;
  }

  .skill-block-header {
    justify-content: start;
    width: 18rem;
    height: 1.5rem;
    overflow-y: auto;

    .skill-block-titles {
      display: flex;
      align-items: center;
      justify-content: start;
      flex-direction: row;

      div {
        font-weight: bolder;
        font-size: 0.7rem;
        color: var(--clr-dice-roll-hover);
      }

      .skill-title-proficiency {
        width: 1.6rem;
      }

      .skill-title-ability {
        padding-left: 0.67rem;
        width: 1.5rem;
      }

      .skill-title-skill {
        padding-left: 1.5rem;
        width: 12.5rem;
      }
    }

    .skill-title-bonus.title {
      padding-right: 0.4rem;
    }
  }

  .skill-block {
    justify-content: start;
    width: 18rem;
    height: 33.5rem;
    overflow-x: hidden;
    overflow-y: auto;

    .skill-box {
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: start;

      label {
        font-size: 0.8rem;
      }

      .base-ability-label {
        display: flex;
        align-content: center;
        justify-content: center;
        color: var(--clr-accent-light);
        font-weight: bolder;
      }

      .proficiency-indicator {
        width: 1.5rem;
        align-items: center;
        justify-content: center;
        text-align: center;
      }

      .base-ability {
        width: 3rem;
      }

      .skill {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: start;
        border-bottom: 0.5px solid var(--clr-char-outline);

        .skill-name {
          width: 10.5rem;

          label {
            font-size: 0.8rem;
            display: flex;
            text-transform: capitalize;
          }
        }

        .skill-dice-roll {
          width: 1.5rem;

          .dice-icon {
            display: flex;
            align-items: center;
            fill: var(--clr-accent-light);
            width: 1rem;
          }
        }

        .skill-dice-roll :hover {
          fill: var(--clr-skill-dice-roll-hover);
          cursor: pointer;
        }

        .skill-modifier {
          display: flex;
          align-items: center;
          justify-content: end;
          width: 1.2rem;
          height: 2rem;
          color: var(--clr-white);

          label {
            font-size: 0.8rem;
          }
        }
      }
    }
  }
}

.lore-wrapper {
  display: flex;
  flex-direction: column;
  align-content: center;
  justify-content: center;
  margin-top: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  gap: 0.5rem;

  .manage-lore {
    margin-top: 0.2rem;
    color: var(--clr-dice-roll-hover)
  }

  .plus-symbol {
    font-size: 1.2rem;
  }
}

.lore-wrapper:hover {
  cursor: pointer;
  font-weight: bolder;
}

.skill-box:nth-child(even) {
  background: #33333344;
}

.skill-label-wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
  gap: 0.5rem;

  & svg {
    width: 1rem;
    height: 1rem;
    fill: var(--clr-white);
  }
}

.lore-skill-panel {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 18rem;
  height: 8rem;
  gap: 0.25rem;
  transition: all 200ms ease-in;
  overflow-y: auto;

  .lore-skill-title {
    color: var(--clr-white);
    background: transparent;
    border: 1px dashed var(--clr-accent-light);
    border-radius: 0.2rem;
  }

  .lore-skill-buttons {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 0.5rem;
  }

  .lore-skill-save-btn {
    color: var(--clr-accent-dark);
    background: var(--clr-dice-roll-hover);
    border-radius: 0.2rem;
    border: 1px solid var(--clr-dice-roll-hover);
    font-size: 0.7rem;
    font-weight: bolder;
    text-transform: capitalize;
    padding: 0.1rem 2rem;
    cursor: pointer;
  }

  .lore-skill-title {
    min-width: 12.2rem;
    font-size: 0.9rem;
    padding: 0.25rem 0.9rem;
  }
}

.manage-lore {
  text-align: center;
}

.skill-block.show {
  height: 26.5rem;
}

.current-skill {
  display: flex;
  align-items: center;
  justify-content: start;
  gap: 0.5rem;
  width: 20rem;
}

.delete-lore {
  width: 1.5rem;
  height: 1.5rem;
  fill: var(--clr-white);

  &:hover {
    cursor: pointer;
    fill: var(--clr-remove-item-hover);
  }
}

